# PX4-Autopilot

./: .gitmodules  CMakeLists.txt  Kconfig
ROMFS/: CMakeLists.txt
ROMFS/px4fmu_common/: CMakeLists.txt
ROMFS/px4fmu_common/init.d/: rc.sensors  rcS
ROMFS/px4fmu_common/init.d-posix/: CMakeLists.txt  px4-rc.mavlink
Tools/: check_code_style_all.sh  px_mkfw.py  px_uploader.py
Tools/simulation/gazebo-classic/: sitl_custom_run.sh  sitl_multiple_run.sh
boards/cubepilot/cubeorangeplus/: default.cmake  default.px4board
boards/cubepilot/cubered/: default.px4board
boards/px4/fmu-v2/: default.cmake
boards/px4/fmu-v4/: default.cmake
boards/px4/fmu-v6x/: default.px4board
cmake/: kconfig.cmake  px4_add_common_flags.cmake  px4_add_module.cmake  sanitizers.cmake
cmake/configs/: posix_sitl_default.cmake  qurt_sdflight_default.cmake
cmake/gtest/: gtest.cmake  px4_add_gtest.cmake
cmake/qurt/: px4_impl_qurt.cmake
msg/: CMakeLists.txt  flight_mode_state.msg  vehicle_status_flags.msg
posix-configs/SITL/init/: rcS_gazebo_iris
posix-configs/eagle/flight/: px4.config
src/drivers/dshot/: DShot.cpp
src/drivers/px4fmu/: fmu.cpp
src/drivers/rc_receiver/: CMakeLists.txt  rc_receiver.cpp
src/drivers/uavcan/: remoteid.cpp  remoteid.hpp  uavcan_main.cpp  uavcan_main.hpp
src/examples/hello/: hello_example.cpp
src/lib/: CMakeLists.txt
src/lib/CollisionPrevention/: CollisionPrevention.cpp  CollisionPrevention.hpp
src/lib/conversion/: rotation.h
src/lib/gtest/: CMakeLists.txt
src/lib/hysteresis/: CMakeLists.txt  hysteresis_test.cpp
src/lib/motion_planning/: PositionSmoothing.cpp  PositionSmoothing.hpp
src/lib/ntestlib/: ntestlib.cpp  ntestlib.h
src/lib/parameters/: parameters.cpp
src/lib/perf/: perf_counter.cpp
src/lib/weather_vane/: WeatherVane.cpp  WeatherVane.hpp
src/modules/commander/: AutoArm.cpp  AutoArm.hpp  CMakeLists.txt  Commander.cpp  Commander.hpp  commander.cpp  commander_helper.cpp  commander_params.c  px4_custom_mode.h  state_machine_helper.cpp  state_machine_helper.h
src/modules/flight_mode_manager/: CMakeLists.txt  FlightModeManager.cpp  FlightModeManager.hpp
src/modules/mavlink/: mavlink_ftp.cpp  mavlink_main.cpp  mavlink_messages.cpp  mavlink_receiver.cpp  mavlink_receiver.h  module.yaml
src/modules/mc_pos_control/: mc_pos_control_main.cpp  multicopter_autonomous_params.c
src/modules/mini_commander/: CMakeLists.txt  arming_state_machine.cpp  arming_state_machine.h  failsafe_state_machine.cpp  failsafe_state_machine.h  mini_commander.cpp  mini_commander.h  mini_commander_fsm.cpp  mini_commander_fsm.h  mini_commander_main.cpp  mini_commander_test.cpp
src/modules/navigator/: mission.cpp  (+2 more)
test_data/: CMakeLists.txt
unittests/: .gitignore  CMakeLists.txt
(+85 files in other folders)
